--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,13 @@
 # SQLite version 3.x
 #   gem install sqlite3
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  encoding: utf8
+  database: ezslp
   pool: 5
-  timeout: 5000
-
+  host: localhost
+  username: postgres
+  password: homer9721
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
