first commit; updated gems

--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,7 @@ development:
   database: ezslp
   pool: 5
   host: localhost
-  username: postgres
+  username: marklocklear
   password: homer9721
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
