--- a/config/database.yml
+++ b/config/database.yml
@@ -6,8 +6,8 @@ development:
   database: ezslp
   pool: 5
   host: localhost
-  username: marklocklear
-  password: homer9721
+  username: barnabasbulpett
+  password: kayamoses
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
